@@ -1,4 +1,5 @@
-/* Copyright (C) 2010
+/* Copyright (C) 2010, 2011, 2012, 2013, 2014, 2015, 2016
+ *               2017
  *               Free Software Foundation, Inc. */
 /* This file is part of GNU Modula-2.
 
@@ -17,30 +18,29 @@ License along with this library; if not, write to the Free Software
 Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston,
 MA 02110-1301, USA */
 
-#include <p2c/p2c.h>
-
+#include "gm2-libs-host.h"
 
 #if defined(HAVE_MATH_H)
 #  include <math.h>
 #endif
 
 #if !defined(HAVE_EXP10)
-double exp10(double x)
+double exp10 (double x)
 {
-  return exp(x*M_LN10);
+  return exp (x*M_LN10);
 }
 #endif
 
 #if !defined(HAVE_EXP10F)
-float exp10f(float x)
+float exp10f (float x)
 {
-  return expf(x*M_LN10);
+  return expf (x*M_LN10);
 }
 #endif
 
 #if !defined(HAVE_EXP10L)
-long double exp10l(long double x)
+long double exp10l (long double x)
 {
-  return expl(x*M_LN10);
+  return expl (x*M_LN10);
 }
 #endif
